--- a/Practica/.css/Style.css
+++ b/Practica/.css/Style.css
@@ -1,35 +1,35 @@
-body{
-    background-color: rgb(124, 139, 167);
+body{   
+    background-color: rgba(161, 158, 158, 0.774);
+    }
+
+*{ text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(14, 12, 12);
+    background-color: transparent;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 30px;
 }
+
 img{
-    width: 430px; height: 300px;
+    width: 30%; height: 40%;
     border: 4px solid rgba(97, 88, 88, 0.582);
-    border-radius: 20px;
+    border-radius: 10px;
+    align-content: stretch;
+
 }
+
 h1{
     color: red;
-    text-align: center;
     border: 2px solid lightgreen;
     border-radius: 2px;
     background-color: lightgreen;
+    margin-left: 38%;
+    margin-right: 38%;
+    font-size: 45px;
 }
-h2{
-    text-align: center;
-    color: rgb(14, 12, 12);
-    background-color: transparent;
-}
+
 h3{
     color: red;
     text-align: left;
-    background-color: transparent;
-}
-h4{
-    color: black;
-    text-align: center;
-    background-color: transparent;
-}
-p{
-    color: black;
-    text-align: left;
-    background-color: transparent;
 }
